package org.example.bibliotheque.entity;

import jakarta.persistence.Entity;

@Entity
public class Particulier extends Utilisateur {
}